[project]
name = "raster-population"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.6.2",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "rasterio>=1.4.3",
    "rasterstats>=0.20.0",
    "tqdm>=4.67.1",
]
